infra/terraform/modules/security/main.tf
resource "aws_security_group" "sg" {
  name        = "${var.cluster_name}-sg"
  vpc_id      = var.vpc_id
  description = "Allow SSH and internal traffic"

  ingress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    self      = true
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
   ingress {
    from_port   = 32345
    to_port     = 32345
    protocol    = "tcp"
    cidr_blocks = ["90.251.112.52/32"]
    description = "Allow Grafana HTTP access "
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


resource "aws_security_group" "efs_sg" {
  name        = "${var.cluster_name}-efs-sg"
  description = "Allow NFS access from node security group"
  vpc_id      = var.vpc_id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.cluster_name}-efs-sg"
  }
}


resource "aws_security_group_rule" "allow_nfs_from_nodes" {
  type                     = "ingress"
  from_port                = 2049
  to_port                  = 2049
  protocol                 = "tcp"
  security_group_id        = aws_security_group.efs_sg.id
  source_security_group_id = aws_security_group.sg.id
  description              = "Allow NFS from node security group"
}
